--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "babel-eslint": "^10.0.2",
         "cross-env": "^5.0.0",
-        "laravel-mix": "^1.0",
+        "eslint": "^6.1.0",
+        "eslint-plugin-vue": "^5.2.3",
+        "laravel-mix": "^4.0",
         "laravel-nova": "^1.0",
-        "vue-single-select": "^1.0.29"
+        "resolve-url-loader": "^3.1.0",
+        "sass": "^1.22.9",
+        "sass-loader": "^7.2.0",
+        "vue-single-select": "^1.1.0",
+        "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "vue": "^2.5.0"
+        "vue": "^2.6.10"
     }
 }
